// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`>>> Knockout Component with Email Success --- Snapshot +++capturing Snapshot with 1`] = `
<form>
  <h3>
    We are reviewing your Submission.
  </h3>
  <div
    className="content"
  >
    <p>
      Based on your answers, we couldn't provide you with a instant pricing indication for the following reasons:
    </p>
    <div
      className="reasons"
    >
      <div
        className="reason"
      >
         
        Project cost is &gt; than $30 million.
      </div>
      <div
        className="reason"
      >
         
        Anticipated Project Length is &gt; 36 months.
      </div>
    </div>
    <p>
      One of our underwriters will be in contact with you to finalize your coverage options and assist you with purchase.
    </p>
    <ul>
      <li>
        Jessica Buelow
         – 
        Supervisor
         – 
        New York
         - 
        212-607-8829
      </li>
    </ul>
  </div>
  <div
    className="emailStatus success"
  >
    <img
      alt="thubms up"
      src="https://s3.us-east-1.amazonaws.com/ownersedge-dev-assets/images/thumbs-up.png"
    />
    <p>
      Your submission forms have been successfully processed.
    </p>
    <span>
      Please check your your inbox. Thank you for using Argo Limited.
    </span>
  </div>
  <ButtonGroup
    block={false}
    bsClass="btn-group"
    justified={false}
    vertical={false}
  >
    <LinkContainer
      action="push"
      onlyActiveOnIndex={false}
      to="/submissions"
    >
      <Button
        active={false}
        block={false}
        bsClass="btn"
        bsStyle="default"
        className="btn"
        disabled={false}
      >
         Return to Submissions
      </Button>
    </LinkContainer>
  </ButtonGroup>
</form>
`;

exports[`>>> Quote Component with Email Pending --- Snapshot +++capturing Snapshot with 1`] = `
<form>
  <h3>
    We are reviewing your Submission.
  </h3>
  <div
    className="content"
  >
    <p>
      Based on your answers, we couldn't provide you with a instant pricing indication for the following reasons:
    </p>
    <div
      className="reasons"
    >
      <div
        className="reason"
      >
         
        Project cost is &gt; than $30 million.
      </div>
      <div
        className="reason"
      >
         
        Anticipated Project Length is &gt; 36 months.
      </div>
    </div>
    <p>
      One of our underwriters will be in contact with you to finalize your coverage options and assist you with purchase.
    </p>
    <ul>
      <li>
        Jessica Buelow
         – 
        Supervisor
         – 
        New York
         - 
        212-607-8829
      </li>
    </ul>
  </div>
  <ButtonGroup
    block={false}
    bsClass="btn-group"
    justified={false}
    vertical={false}
  >
    <LinkContainer
      action="push"
      onlyActiveOnIndex={false}
      to="/submissions"
    >
      <Button
        active={false}
        block={false}
        bsClass="btn"
        bsStyle="default"
        className="btn"
        disabled={false}
      >
         Return to Submissions
      </Button>
    </LinkContainer>
  </ButtonGroup>
</form>
`;
